overflow fix for asset info view

--- a/admin-base/materialize/custom/_explorer.scss
+++ b/admin-base/materialize/custom/_explorer.scss
@@ -195,6 +195,9 @@
 							flex-direction: column;
 							overflow: auto;
 							height: 100%;
+							.vue-form-generator {
+								overflow: visible;
+							}
 							img {
 								width: auto;
 								max-width: 100%;
